validaçao do add

--- a/MovieHubFrontend/src/app/components/actor-add/actor-add.component.html
+++ b/MovieHubFrontend/src/app/components/actor-add/actor-add.component.html
@@ -5,20 +5,20 @@
       <div class="row">
         <!-- Name -->
         <div class="col-md-6 mb-3">
-          <label for="name" class="form-label" style="color: #343a40; font-weight: 500;">Name</label>
+          <label for="name" class="form-label" style="color: #343a40; font-weight: 500;">Name<span style="color:red">*</span></label>
           <input formControlName="name" id="name" class="form-control" placeholder="Actor Name" required>
         </div>
 
         <!-- Date of Birth -->
         <div class="col-md-6 mb-3">
-          <label for="date_of_birth" class="form-label" style="color: #343a40; font-weight: 500;">Date of Birth</label>
+          <label for="date_of_birth" class="form-label" style="color: #343a40; font-weight: 500;">Date of Birth<span style="color:red">*</span></label>
           <input formControlName="date_of_birth" id="date_of_birth" type="date" class="form-control" required>
         </div>
 
         <!-- Place of Birth -->
         <div class="col-md-6 mb-3">
           <label for="place_of_birth" class="form-label" style="color: #343a40; font-weight: 500;">Place of
-            Birth</label>
+            Birth<span style="color:red">*</span></label>
           <input formControlName="place_of_birth" id="place_of_birth" class="form-control" placeholder="Place of Birth"
             required>
         </div>
@@ -31,7 +31,7 @@
 
         <!-- Biography -->
         <div class="col-12 mb-3">
-          <label for="biography" class="form-label" style="color: #343a40; font-weight: 500;">Biography</label>
+          <label for="biography" class="form-label" style="color: #343a40; font-weight: 500;">Biography<span style="color:red">*</span></label>
           <textarea formControlName="biography" id="biography" rows="3" class="form-control"
             placeholder="Short biography"></textarea>
         </div>
