--- a/MovieHubFrontend/src/app/components/producer-add/producer-add.component.html
+++ b/MovieHubFrontend/src/app/components/producer-add/producer-add.component.html
@@ -5,19 +5,19 @@
         <div class="row">
           <!-- Name -->
           <div class="col-md-6 mb-3">
-            <label for="name" class="form-label" style="color: #343a40; font-weight: 500;">Name</label>
+            <label for="name" class="form-label" style="color: #343a40; font-weight: 500;">Name<span style="color:red">*</span></label>
             <input formControlName="name" id="name" class="form-control" placeholder="Producer Name" required>
           </div>
   
           <!-- Date of Birth -->
           <div class="col-md-6 mb-3">
-            <label for="date_of_birth" class="form-label" style="color: #343a40; font-weight: 500;">Date of Birth</label>
+            <label for="date_of_birth" class="form-label" style="color: #343a40; font-weight: 500;">Date of Birth<span style="color:red">*</span></label>
             <input formControlName="date_of_birth" id="date_of_birth" type="date" class="form-control" required>
           </div>
   
           <!-- Biography -->
           <div class="col-12 mb-3">
-            <label for="biography" class="form-label" style="color: #343a40; font-weight: 500;">Biography</label>
+            <label for="biography" class="form-label" style="color: #343a40; font-weight: 500;">Biography<span style="color:red">*</span></label>
             <textarea formControlName="biography" id="biography" rows="3" class="form-control"
               placeholder="Short biography"></textarea>
           </div>
